--- a/static/styles/main.less
+++ b/static/styles/main.less
@@ -159,15 +159,13 @@ p {
 
         h1 { font-size: 1.25em; }
         h2 { font-size: 0.75em; }
-        #signout { display: none; }
-
-        .btn {
+        h3 { font-size: 0.75em; margin-bottom: 0px; }
+        
+        a {
             display: inline-block;
-            background: @gray;
-            color: @white;
+            color: @gray;
             font-size: 0.75em;
             margin-top: 10px;
-            width: auto;
         }
     }
     
